--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "MagicMirror",
     "Shabbat",
     "Hebrew",
-    "Jewish",
+    "Jewish"
   ],
   "author": "sheyabernstein",
   "license": "MIT",
